feat: update PlanServiceImpl to handle v4
Use mapping instead of cast to handle all types of APIs in PlanServiceImpl

APIM-7865